# supertonic-py

./: .gitignore  .pre-commit-config.yaml  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  publish.yml  test.yml
api/: index.html
api/cli/: index.html
api/config/: index.html
api/core/: index.html
api/loader/: index.html
api/pipeline/: index.html
api/utils/: index.html
argparse/download.inc/: index.html
argparse/info.inc/: index.html
argparse/list-voices.inc/: index.html
argparse/say.inc/: index.html
argparse/tts.inc/: index.html
argparse/version.inc/: index.html
cli/: index.html
cli/download/: index.html
cli/info/: index.html
cli/list-voices/: index.html
cli/say/: index.html
cli/tts/: index.html
cli/version/: index.html
docs/: index.md  quickstart.md  voices.md
docs/api/: cli.md  config.md  core.md  index.md  loader.md  pipeline.md  utils.md
docs/argparse/: say.inc.md  tts.inc.md
docs/cli/: .nav.yml  README.md  download.md  info.md  list-voices.md  say.md  tts.md  version.md
docs/hooks/: generate_api_ref.py  generate_cli_ref.py
docs/overrides/partials/: footer.html
docs/stylesheets/: extra.css
examples/: README.md  test1_simple.py  test2_voices.py  test3_quality.py  test4_custom_reference.py  test5_speed_control.py  test6_long_text.py  test7_text_validation.py  test8_verbose_mode.py
notebook/: supertonic_demo.ipynb
quickstart/: index.html
search/: search_index.json
supertonic/: __init__.py  cli.py  config.py  core.py  loader.py  pipeline.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_imports.py  test_loader.py  test_pipeline.py  test_utils.py  test_validation.py
voices/: index.html
